[project]
name = "comfyui-consistency-decoder"
description = "[a/openai Consistency Decoder](https://github.com/openai/consistencydecoder). After downloading the [a/OpenAI VAE model](https://openaipublic.azureedge.net/diff-vae/c9cebd3132dd9c42936d803e33424145a748843c8f716c0814838bdc8a2fe7cb/decoder.pt), place it in the `model/vae` directory for use."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shadowcz007/comfyui-consistency-decoder"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-consistency-decoder"
Icon = ""
